Fix navigation menu and add smooth scrolling functionality

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <img src="images/logo/logo.png" alt="Half Baked Logo">
             </div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#order">Order Now</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#menu">Menu</a></li>
+                <li><a href="index.html#about">About Us</a></li>
+                <li><a href="order.html">Order Now</a></li>
+                <li><a href="tracking.html">Track Order</a></li>
             </ul>
         </nav>
     </header>
