Update website with new menu items, order form functionality, and improved user interactions

--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
                     <h3>Mouthwatering Cookies</h3>
                     <p>Freshly baked cookies with premium ingredients</p>
                     <div class="flavor-options">
+                        <h4>Cookie Options</h4>
+                        <ul class="flavor-list">
+                            <li>
+                                <span class="flavor-name">Pecan Delight</span>
+                            </li>
+                            <li>
+                                <span class="flavor-name">Double Chocolate Chip</span>
+                            </li>
+                        </ul>
                         <ul class="flavor-list">
                             <li>
                                 <span class="flavor-name">Single Cookie</span>
@@ -108,6 +117,14 @@
                     <h3>Indulgent Cobblers</h3>
                     <p>Warm, comforting cobblers made with seasonal fruits</p>
                     <p class="price">$10 each</p>
+                </div>
+            </div>
+            <div class="menu-item">
+                <img src="images/products/brownies.jpg" alt="Luv Me Brownies">
+                <div class="menu-item-content">
+                    <h3>Luv Me Brownies</h3>
+                    <p>Rich, fudgy brownies made with love</p>
+                    <p class="price">$7 each</p>
                 </div>
             </div>
         </div>
