--- a/order.html
+++ b/order.html
@@ -76,6 +76,18 @@
                     <h4>Cookies</h4>
                     <div class="item-option">
                         <label>
+                            <input type="checkbox" name="cookies" value="pecan"> Pecan Delight
+                            <input type="number" name="pecan_qty" min="0" max="20" value="0">
+                        </label>
+                    </div>
+                    <div class="item-option">
+                        <label>
+                            <input type="checkbox" name="cookies" value="chocolate"> Double Chocolate Chip
+                            <input type="number" name="chocolate_qty" min="0" max="20" value="0">
+                        </label>
+                    </div>
+                    <div class="item-option">
+                        <label>
                             <input type="checkbox" name="cookies" value="single"> Single Cookie ($3)
                             <input type="number" name="single_qty" min="0" max="20" value="0">
                         </label>
@@ -84,6 +96,16 @@
                         <label>
                             <input type="checkbox" name="cookies" value="double"> Two Cookies ($5)
                             <input type="number" name="double_qty" min="0" max="10" value="0">
+                        </label>
+                    </div>
+                </div>
+
+                <div class="menu-selection">
+                    <h4>Luv Me Brownies ($7 each)</h4>
+                    <div class="item-option">
+                        <label>
+                            <input type="checkbox" name="brownies" value="luvme"> Luv Me Brownie
+                            <input type="number" name="brownie_qty" min="0" max="10" value="0">
                         </label>
                     </div>
                 </div>
