--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Half Baked - Sweet Treats, Anytime, Anywhere</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -13,7 +13,8 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo/logo.png" alt="Half Baked Logo">
+                <img src="/images/logo/logo.png" alt="Half Baked Logo">
+                <h1>Half Baked</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -44,7 +45,7 @@
         <h2>Our Specialties</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <img src="images/products/cheesecake.jpeg" alt="Signature Cheesecake">
+                <img src="/images/products/cheesecake.jpeg" alt="Cheesecake">
                 <div class="menu-item-content">
                     <h3>Unique Cheesecakes</h3>
                     <p>Indulge in our signature cheesecake creations, available in whole slices or bite-sized portions.</p>
@@ -84,7 +85,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="images/products/cookies.jpg" alt="Gourmet Cookies">
+                <img src="/images/products/cookies.jpg" alt="Cookies">
                 <div class="menu-item-content">
                     <h3>Mouthwatering Cookies</h3>
                     <p>Freshly baked cookies with premium ingredients</p>
@@ -112,7 +113,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="images/products/cobbler.jpg" alt="Indulgent Cobbler">
+                <img src="/images/products/cobbler.jpg" alt="Cobbler">
                 <div class="menu-item-content">
                     <h3>Indulgent Cobblers</h3>
                     <p>Warm, comforting cobblers made with seasonal fruits</p>
@@ -172,6 +173,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="/script.js" defer></script>
 </body>
 </html> 
