--- a/public/order.html
+++ b/public/order.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order - Half Baked</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <script src="/script.js" defer></script>
+    <script src="script.js" defer></script>
     <style>
         #order-form {
             max-width: 800px;
@@ -155,7 +155,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="/images/logo/logo.png" alt="Half Baked Logo">
+                <img src="images/logo/logo.png" alt="Half Baked Logo">
                 <h1>Half Baked</h1>
             </div>
             <ul class="nav-links">
